--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,17 @@
 
   --fs-200: 0.5rem;
   --fs-400: 1rem;
-  --fs-600: 1.5rem;
-  --fs-800: 2rem;
-  --fs-900: 3rem;
+  --fs-600: 1.25rem;
+  --fs-800: 1.5rem;
+  --fs-900: 2rem;
+}
+
+@media (min-width: 48em) {
+  :root {
+    --fs-600: 1.5rem;
+    --fs-800: 2rem;
+    --fs-900: 3rem;
+  }
 }
 
 /* fonts */
@@ -174,6 +182,12 @@ svg {
 
 .container {
   max-width: 75rem;
-  padding: 1rem;
+  padding: 0.5rem;
   margin-inline: auto;
+}
+
+@media (min-width: 48em) {
+  .container {
+    padding: 1rem;
+  }
 }
