--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -41,6 +41,7 @@
     margin-left: auto;
     margin-right: 3rem;
     transform: translateX(0%);
+    transition: transform 0ms;
   }
 
   .cart-btn {
