--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,7 @@ svg {
 .nav-item:hover,
 .nav-item:focus {
   color: hsl(var(--clr-secondary-300));
+  transition: color 200ms ease-in-out;
 }
 
 .nav-item.active {
