--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,54 +1,34 @@
+.header-items {
+  margin-left: auto;
+  gap: 1.5rem;
+}
+
 .primary-nav {
-  position: fixed;
-  inset: 0 0 0 40%;
-  padding: 5rem 0 0 2rem;
+  display: none;
+}
+
+.side-menu-nav-container,
+.side-menu-nav {
   flex-direction: column;
   gap: 3rem;
-  transform: translateX(100%);
-  transition: transform 300ms ease-in-out;
 }
 
-.primary-nav.open {
-  transform: translateX(0%);
-}
-
-.cart-btn {
-  gap: 0.3rem;
-  margin-left: auto;
-  margin-right: 3rem;
-}
-
-.cart-icon {
-  font-size: 1.5rem;
-}
-
-.toggle-nav-btn {
-  position: absolute;
-  right: 1rem;
-  top: 1rem;
-}
-
-.toggle-nav-icon {
-  font-size: 2rem;
+.side-menu-nav-container {
+  padding: 2rem;
+  align-items: flex-end;
 }
 
 @media (min-width: 48em) {
+  .header-items {
+    gap: 3rem;
+  }
+
   .primary-nav {
-    position: static;
-    inset: 0 0 0 0;
-    padding: 0;
-    flex-direction: row;
-    margin-left: auto;
-    margin-right: 3rem;
-    transform: translateX(0%);
-    transition: transform 0ms;
+    display: flex;
+    gap: 3rem;
   }
 
-  .cart-btn {
-    margin-left: 0;
-  }
-
-  .toggle-nav-btn {
+  .open-nav-btn {
     display: none;
   }
 }
