--- a/src/index.css
+++ b/src/index.css
@@ -185,6 +185,16 @@ svg {
   align-items: center;
 }
 
+.icon-md {
+  font-size: 1.5rem;
+}
+.icon-lg {
+  font-size: 2rem;
+}
+.btn-with-icon {
+  gap: 0.3rem;
+}
+
 .fs-200 {
   font-size: var(--fs-200);
 }
