--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   font-family: "Manrope", sans-serif;
+  background-color: hsl(var(--clr-accent-400) / 0.1);
 }
 
 a {
