--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -31,6 +31,11 @@
   max-width: 60ch;
 }
 
+.homepage-heading {
+  text-align: center;
+  margin-block: 2rem;
+}
+
 .category-list {
   display: grid;
   gap: 1rem;
@@ -76,5 +81,10 @@
     gap: 3rem;
     align-items: flex-start;
     text-align: start;
+  }
+
+  .homepage-heading {
+    text-align: start;
+    margin-block: 3rem;
   }
 }
