--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,16 +1,49 @@
 .hero-section {
   background: hsl(var(--clr-secondary-800) / 0.7)
     url("../../assets/images/hero-img-sm.jpg");
+  padding-block: 2rem;
+}
+
+.category-item--men {
+  background: hsl(var(--clr-secondary-800) / 0.4)
+    url("../../assets/images/men's-sm.jpg");
+}
+
+.category-item--women {
+  background: hsl(var(--clr-secondary-800) / 0.4)
+    url("../../assets/images/women's-sm.jpg");
+}
+
+.category-item--jewellery {
+  background: hsl(var(--clr-secondary-800) / 0.4)
+    url("../../assets/images/jewellery-sm.jpg");
+}
+
+.hero-section,
+.category-item--men,
+.category-item--women,
+.category-item--jewellery {
   background-blend-mode: darken;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding-block: 2rem;
 }
 
 @media (min-width: 40em) {
   .hero-section {
     background-image: url("../../assets/images/hero-img-md.jpg");
+  }
+
+  .category-item--men {
+    background-image: url("../../assets/images/men's-md.jpg");
+  }
+
+  .category-item--women {
+    background-image: url("../../assets/images/women's-md.jpg");
+  }
+
+  .category-item--jewellery {
+    background-image: url("../../assets/images/jewellery-md.jpg");
   }
 }
 
@@ -33,7 +66,7 @@
 
 .homepage-heading {
   text-align: center;
-  margin-block: 2rem;
+  margin-block: 1rem;
 }
 
 .category-list {
@@ -41,19 +74,11 @@
   gap: 1rem;
 }
 
-.category-card {
-  background-color: hsl(var(--clr-primary-100));
-  flex-direction: column;
-  gap: 1rem;
+.category-item {
+  min-height: 20rem;
   padding: 1rem;
-  min-height: 100%;
-  border-radius: 8px;
-}
-
-.category-card__image {
-  max-width: 10rem;
-  height: 10rem;
-  object-fit: contain;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 @media (min-width: 48em) {
@@ -66,9 +91,17 @@
   }
 
   .category-list {
-    gap: 2rem;
-    grid-template-columns: repeat(3, 1fr);
-    padding-block: 1rem;
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+  }
+
+  .category-list > :last-child {
+    grid-column: span 2;
+  }
+
+  .category-item {
+    min-height: 28rem;
+    padding: 2rem;
   }
 }
 
