--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -19,10 +19,16 @@
     url("../../assets/images/jewellery-sm.jpg");
 }
 
+.about-section {
+  background: hsl(var(--clr-secondary-800) / 0.8)
+    url("../../assets/images/about-sm.jpg");
+}
+
 .hero-section,
 .category-item--men,
 .category-item--women,
-.category-item--jewellery {
+.category-item--jewellery,
+.about-section {
   background-blend-mode: darken;
   background-repeat: no-repeat;
   background-position: center;
@@ -44,6 +50,10 @@
 
   .category-item--jewellery {
     background-image: url("../../assets/images/jewellery-md.jpg");
+  }
+
+  .about-section {
+    background-image: url("../../assets/images/about-lg.jpg");
   }
 }
 
@@ -69,6 +79,10 @@
   margin-block: 1rem;
 }
 
+.category-section {
+  margin-block: 3rem;
+}
+
 .category-list {
   display: grid;
   gap: 1rem;
@@ -79,6 +93,17 @@
   padding: 1rem;
   justify-content: flex-end;
   align-items: flex-end;
+}
+
+.about-section {
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+  padding-block: 7rem;
+}
+
+.about-section__paragraph {
+  max-width: 65ch;
 }
 
 @media (min-width: 48em) {
