Render product details in product page

--- a/src/components/product-list/product-list.css
+++ b/src/components/product-list/product-list.css
@@ -35,11 +35,7 @@
 }
 
 .product__add-btn {
-  justify-self: flex-end;
-}
-
-.spinner {
-  justify-content: center;
+  width: 100%;
 }
 
 @media (min-width: 48em) {
